build: java: remove obsolete MaxPermSize jvm arg
Option removed in Java 8.